--- a/software/project/keil/CortexMx_Bootloader/MDK-ARM/CortexMx_Bootloader.uvprojx
+++ b/software/project/keil/CortexMx_Bootloader/MDK-ARM/CortexMx_Bootloader.uvprojx
@@ -16,7 +16,7 @@
         <TargetCommonOption>
           <Device>STM32F103C8</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F1xx_DFP.2.4.0</PackID>
+          <PackID>Keil.STM32F1xx_DFP.2.3.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000-0x20004FFF) IROM(0x8000000-0x800FFFF)  CLOCK(8000000) CPUTYPE("Cortex-M3") TZ</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -548,6 +548,11 @@
               <FileName>protocol_adapter.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\src\adapter\protocol_adapter.c</FilePath>
+            </File>
+            <File>
+              <FileName>mcu_adapter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\src\adapter\mcu_adapter.c</FilePath>
             </File>
           </Files>
         </Group>
